--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
     * { /* Targets all elements */
        /* Adds a padding of 10 pixels to all elements */
       font-family: Calibri, sans-serif;
+      animation: fadein 0.5s; /* Add a fade-in animation when the page loads */
     }
   /* Add a hover effect to the rows of the table */
   table tbody tr:hover {
     background-color: #00987a4b;
+  }
+
+  /* Add the fade-in animation */
+  @keyframes fadein {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
   }
 
   /* Colorize the text in the "Status" column if it has the value "langweilig" */
@@ -120,16 +131,74 @@ tr:last-of-type td:last-of-type {
       font-weight: bold;
       font-size: 16px;
     }
+    .search-input::placeholder {
+  padding: 10px;
+  font-size: 15px; /* Increase the font size to 18 pixels */
+  color: gray; /* Change the color to gray */
+}
+
+.search-input {
+  padding: 10px;
+  font-size: 15px; /* Increase the font size to 18 pixels */
+  color: gray; /* Change the color to gray */
+}
+
+    .search-input {
+      margin-top: 10px;
+      height:30px;
+      display: inline-block;
+      font-size:15px;
+  background-color: white;
+  border: 1px solid #009879;
+}
+
+.search-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center; /* Align the elements to the center */
+}
+
+/* Style the search icon when it is clicked */
+.search-icon:active {
+  background-color: lightblue;
+}
+
+tr td:nth-child(2).offen {
+  color: red;
+}
+
+td:nth-child(2).not-offen {
+  /* Selects cells in the fourth column with the class "not-done" */
+  color: green;
+}
+
+
+  /* Style the search icon */
+  .search-icon {
+    width: 24px;
+    height: 24px;
+    background-image: url(1024px-Search_Icon.svg.png);
+    background-size: cover;
+    margin-right: 8px;
+    cursor: pointer; /* Add this line to change the cursor to a pointer when hovering over the search icon */
+  }
+
+.search-input:hover,
+.search-input:focus {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
 
 
 div {overflow-x:auto;margin-left: 15px; margin-right: 15px;}
 
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/table-sorter/2.31.3/js/jquery.tablesorter.min.js"></script>
   <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
  
 
 </head>
@@ -149,17 +218,31 @@ div {overflow-x:auto;margin-left: 15px; margin-right: 15px;}
 
     </p>
      </div></div>
-     <div>
-  <button class="refresh-button" onclick="window.location.reload();">Refresh</button></div>
-  
+     <div class="search-container">
+      <button class="refresh-button" onclick="window.location.reload();">Refresh</button>    
+        <form>
+        <input type="text" id="search" class="search-input" placeholder="Search">
+      </form>
+    </div>
+
   
  <div>
     <table id="data-table" class = "sortable">
       <thead>
         <tr>
-          <th>Restaurant-Nummer</th>
+          <th>Store</th>
+          <th>F/C</th>
+          <th>Art</th>
+          <th>Variante</th>
           <th>Adresse</th>
-          <th>Status</th>
+          <th>DL</th>
+          <th>KW</th>
+          <th>Abbau</th>
+          <th>IT Tag 1</th>
+          <th>IT Tag 2</th>
+          <th>IT Tag 3</th>
+          <th>IT Tag 4</th>
+          <th>Eröffnung</th>
         </tr>
       </thead>
       <tbody>
@@ -169,13 +252,13 @@ div {overflow-x:auto;margin-left: 15px; margin-right: 15px;}
   <script>
     
     // Replace YOUR_SHEET_ID with the ID of your Google Sheets file
-    const SHEET_ID = '1eBROkCqq9pP7DI29cFeglghBPFOJ-75ozunQGkGVprE';
+    const SHEET_ID = '1Y5nmITD-nCh1Au4RwxMNxwgNMTke5PKaVLJKVmykilA';
     // Replace YOUR_API_KEY with your Google API key
     const API_KEY = 'AIzaSyAgtyYzCyesKwKsBr1Qzee0jJoFMuwONtE';
 
     // Make a GET request to the Google Sheets API to retrieve the data for the table
     $.ajax({
-      url: `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/A1:C10?key=${API_KEY}`,
+      url: `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/A1:M28?key=${API_KEY}`,
       type: 'GET',
       success: function(response) {
         // The response from the API includes the data for the table in the "values" property
@@ -187,18 +270,53 @@ div {overflow-x:auto;margin-left: 15px; margin-right: 15px;}
               <td>${item[0]}</td>
               <td>${item[1]}</td>
               <td>${item[2]}</td>
+              <td>${item[3]}</td>
+              <td>${item[4]}</td>
+              <td>${item[5]}</td>
+              <td>${item[6]}</td>
+              <td>${item[7]}</td>
+              <td>${item[8]}</td>
+              <td>${item[9]}</td>
+              <td>${item[10]}</td>
+              <td>${item[11]}</td>
+              <td>${item[12]}</td>
             </tr>
           `);
         });
       }
     });
-    
-
   </script>
-
-
-
-
+  <script>
+    // Get a reference to the search input
+    const searchInput = document.getElementById('search');
+  
+    // Add an event listener to the search input
+    searchInput.addEventListener('keyup', function() {
+      // Get the search term
+      const searchTerm = this.value.toLowerCase();
+  
+      // Get a reference to all the rows in the table
+      const rows = document.querySelectorAll('table tbody tr');
+  
+      // Iterate through the rows
+      rows.forEach(function(row) {
+        // Get the text content of all the cells in the row
+        const cells = row.querySelectorAll('td');
+        let cellText = '';
+        cells.forEach(function(cell) {
+          cellText += cell.textContent.toLowerCase() + ' ';
+        });
+  
+        // If the search term is not found in the cell text, hide the row
+        if (cellText.indexOf(searchTerm) === -1) {
+          row.style.display = 'none';
+        } else {
+          // Otherwise, show the row
+          row.style.display = '';
+        }
+      });
+    });
+  </script>
 
 </body>
 </html>
