--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ div {overflow-x:auto;margin-left: 15px; margin-right: 15px;}
 <body>
   <nav>
     <span class="brand">
-      <img src="Logo SOS IS GmbH Neu shadow_tif.webp" style = "width: 100px; margin-top:10px; margin-left:-5px;"></img>
+      <img src="https://static.wixstatic.com/media/b467c7_840867c242e949c2a7ddce72c1048dc1~mv2.png/v1/fill/w_135,h_80,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Logo%20SOS%20IS%20GmbH%20Neu%20shadow_tif.png" style = "width: 100px; margin-top:10px; margin-left:-5px;"></img>
     </span>
     <div class="menu">
       <a href="#home" class="active scroll-page"><i class="material-icons">Home</i></a><br>
