--- a/index.html
+++ b/index.html
@@ -92,9 +92,8 @@
 									alle laufenden, geplanten und ungeplanten Projekte geben. Weiterhin gibt es eine
 									Archivfunktion für die vergangenen
 									Jahre.</p>
-								<p class="section-paragraph"> Für Fragen und
-									Anregungen wenden Sie sich bitte an den Großmeister Alexander M. oder seinen
-									Gehilfen (das bin dann ich) – Torsten Mitte.</p>
+								<p class="section-paragraph"> Bei Fragen, Problemen und Anregungen nutzen Sie den
+									untenstehenden Link.</p>
 							</div>
 						</div>
 						<div class=" features-wrap">
