--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
 											</g>
 										</svg>
 									</div>
-									<h4 class="feature-title h3-mobile mb-8">Geplante Rolloutprojekte</h4>
-									<p class="text-sm">Detaillierte Übersicht über alle geplanten Rolloutprojekte</p>
+									<h4 class="feature-title h3-mobile mb-8">Laufende Rolloutprojekte</h4>
+									<p class="text-sm">Detaillierte Übersicht über laufende Rolloutprojekte</p>
 									<button class="go-to-button"
 										style="margin-left: -58px; position:absolute; border: none; color: white; padding: 5px 20px; text-align: center; text-decoration: none; font-size: 16px; cursor: pointer; border-radius: 25px; font-weight: bold; background-color:#FF6381"
 										onclick="location.href='inprogress.html';">Go to Page</button>
@@ -142,7 +142,7 @@
 									<p class="text-sm">Forecast für alle geplanten Rolloutprojekte</p>
 									<button class="go-to-button"
 										style="margin-left: -58px; position:absolute; border: none; color: white; padding: 5px 20px; text-align: center; text-decoration: none; font-size: 16px; cursor: pointer; border-radius: 25px; font-weight: bold; background-color:#4950F6"
-										onclick="location.href='archive.html';">Go to Page</button>
+										onclick="location.href='forecast.html';">Go to Page</button>
 								</div>
 							</div>
 							<div class="feature text-center is-revealing">
