--- a/inprogress.html
+++ b/inprogress.html
@@ -519,6 +519,12 @@
       });
     });
   </script>
+  <script>
+    setInterval(function () {
+      location.reload();
+    }, 1800000); // 3600000 milliseconds = 1 hour
+
+  </script>
 
   <script>
     $(function () {
