--- a/archiv.html
+++ b/archiv.html
@@ -20,15 +20,8 @@
     }
 
     * {
-      /* Targets all elements */
-      /* Adds a padding of 10 pixels to all elements */
-      font-family: Roboto, sans-serif;
+      font-family: "Ubuntu", sans-serif;
       animation: fadein 0.5s;
-      /* Add a fade-in animation when the page loads */
-    }
-
-    body {
-      background-color: #f7f7f7;
     }
 
     /* Add the fade-in animation */
@@ -45,7 +38,7 @@
 
 
   <head>
-    <title>Forecast</title>
+    <title>Archiv</title>
     <link rel="icon" href="Logo SOS IS GmbH Neu shadow_tif.webp">
     <script src=" https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
@@ -71,16 +64,15 @@
       <h2>McDonald's Rolloutmonitor</h2>
     </div>
     <div class="middle">
-      <p style="margin-left: 15px; font-weight: bold;"> Projektstatus: </p>
-      <a class="scroll-page" href="#abgeschlossen">Abgeschlossen</a>
-      <a class="scroll-page" href="#inbau">In Bau befindlich</a>
-      <a class="scroll-page" href="#vertrag">Vertrag</a>
-      <a class="scroll-page" href="#freigabe2">Freigabe 2</a>
+      <p style="margin-left: 15px; font-weight: bold;">Jahr: </p>
+      <a class="scroll-page" href="#2024">2024</a>
+      <a class="scroll-page" href="#2023">2023</a>
+      <a class="scroll-page" href="#2022">2022</a>
     </div>
     <div class="right">
       <a href="index.html">Home</a>
-      <a href="detail.html">Detailplanung</a>
-      <a href="archiv.html">Archiv</a>
+      <a href="detail.html">Detaillplanung</a>
+      <a href="forecast.html">Forecast</a>
     </div>
   </nav>
 
@@ -89,32 +81,29 @@
 <body>
 
   <section id="home">
-
     <div>
       <h1>
-        Forecast für alle geplanten Rolloutprojekte
+        Archiv
       </h1>
     </div>
     <div class="info-box">
       <div class="info-box__icon">i</div>
       <div class="info-box__text">
-        Diese Seite bietet Ihnen einen Überblick über alle geplanten Rolloutprojekte. Diese sind
-        nach ihrem
-        spezifischen Projektstatus sortiert aufgelistet. <br>
+        Diese Seite bietet Ihnen einen Überblick über alle abgeschlossenen Rolloutprojekte der vergangenen Jahre. <br>
         Die Daten werden fortlaufend aktualisiert. Um immer die aktuellsten Daten zu erhalten, drücken
         Sie bitte auf den Refresh Button.
 
       </div>
     </div>
   </section id="home">
-  <section id="abgeschlossen">
+  <section id="2024">
     <div>
       <h2>
-        Abgeschlossen / Umgesetzt
+        2024
       </h2>
     </div>
     </p>
-    <!-- Refresh and search container -->
+
     <div class="refresh-search-container">
       <!-- Refresh button -->
       <button class="refresh-button" onclick="window.location.reload();"><i class="fa fa-refresh"
@@ -128,7 +117,7 @@
       </div>
     </div>
     <div>
-      <table id="abgeschlossen-table" class="sortable">
+      <table id="2024-table" class="sortable">
         <thead>
           <tr>
             <th class="long">Store</th>
@@ -143,6 +132,7 @@
             <th>KW</th>
             <th>Eröffnung</th>
             <th>KW</th>
+            <th>VIP-Support</th>
           </tr>
         </thead>
         <tbody>
@@ -150,12 +140,12 @@
       </table>
 
     </div>
-  </section>
+  </section id="2024">
 
-  <section id="inbau">
+  <section id="2023">
     <div>
       <h2>
-        In Bau befindlich
+        2023
       </h2>
 
     </div>
@@ -175,52 +165,7 @@
 
 
     <div>
-      <table id="inbau-table" class="sortable">
-        <thead>
-          <tr>
-            <th class="long">Store</th>
-            <th>PLZ</th>
-            <th class="short">Ort</th>
-            <th class="medium">Straße</th>
-            <th class="long">Art</th>
-            <th class="short">F/C</th>
-            <th class="short">Variante</th>
-            <th class="short">DL</th>
-            <th>Schließung</th>
-            <th>KW</th>
-            <th>Eröffnung</th>
-            <th>KW</th>
-          </tr>
-        </thead>
-        <tbody>
-        </tbody>
-      </table>
-    </div>
-  </section>
-
-  <section id="vertrag">
-    <div>
-      <h2>
-        Vertrag
-      </h2>
-    </div>
-    </p>
-    <div class="refresh-search-container">
-      <!-- Refresh button -->
-      <button class="refresh-button" onclick="window.location.reload();"><i class="fa fa-refresh"
-          style="margin-right: 10px;"></i>Aktualisieren</button>
-      <!-- Search box container -->
-      <div class="search-box-container">
-        <!-- Search box -->
-        <i class="fas fa-search search-icon"></i>
-        <input type="text" class="search-box" placeholder="Suche...">
-        <!-- Search icon -->
-      </div>
-    </div>
-
-
-    <div>
-      <table id="vertrag-table" class="sortable">
+      <table id="2023-table" class="sortable">
         <thead>
           <tr>
             <th class="long">Store</th>
@@ -243,10 +188,10 @@
     </div>
   </section>
 
-  <section id="freigabe2">
+  <section id="2022">
     <div>
       <h2>
-        Freigabe 2
+        2022
       </h2>
     </div>
     </p>
@@ -262,8 +207,10 @@
         <!-- Search icon -->
       </div>
     </div>
+
+
     <div>
-      <table id="freigabe2-table" class="sortable">
+      <table id="2022-table" class="sortable">
         <thead>
           <tr>
             <th class="long">Store</th>
@@ -285,7 +232,6 @@
       </table>
     </div>
   </section>
-
 
   <script>
 
