--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <style>
-	.go-to-button:hover {
-		padding: 0px;
+	* {
+		font-family: "Ubuntu", sans-serif;
 	}
 </style>
 
@@ -13,6 +13,7 @@
 	<title>April Template</title>
 	<link href="https://fonts.googleapis.com/css?family=Heebo:400,500,700|Fira+Sans:600" rel="stylesheet">
 	<link rel="stylesheet" href="dist/css/style.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
 	<script src="https://unpkg.com/animejs@2.2.0/anime.min.js"></script>
 	<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
@@ -113,7 +114,7 @@
 									<p class="text-sm">Detaillierte Übersicht über laufende Rolloutprojekte</p>
 									<button class="go-to-button"
 										style="margin-left: -58px; position:absolute; border: none; color: white; padding: 5px 20px; text-align: center; text-decoration: none; font-size: 16px; cursor: pointer; border-radius: 25px; font-weight: bold; background-color:#FF6381"
-										onclick="location.href='inprogress.html';">Go to Page</button>
+										onclick="location.href='detail.html';">Go to Page</button>
 								</div>
 
 							</div>
@@ -162,7 +163,7 @@
 									<p class="text-sm">Alle abgeschlossenen Rolloutprojekte</p>
 									<button class="go-to-button"
 										style="margin-left: -58px; position:absolute; border: none; color: white; padding: 5px 20px; text-align: center; text-decoration: none; font-size: 16px; cursor: pointer; border-radius: 25px; font-weight: bold; background-color:#ff997d"
-										onclick="location.href='archive.html';">Go to Page</button>
+										onclick="location.href='archiv.html';">Go to Page</button>
 								</div>
 							</div>
 							<div class="feature text-center is-revealing">
