--- a/forecast.html
+++ b/forecast.html
@@ -70,13 +70,6 @@
         alt="McDonald's logo">
       <h2>McDonald's Rolloutmonitor</h2>
     </div>
-    <div class="middle">
-      <p style="margin-left: 15px; font-weight: bold;"> Projektstatus: </p>
-      <a class="scroll-page" href="#abgeschlossen">Abgeschlossen</a>
-      <a class="scroll-page" href="#inbau">In Bau befindlich</a>
-      <a class="scroll-page" href="#vertrag">Vertrag</a>
-      <a class="scroll-page" href="#freigabe2">Freigabe 2</a>
-    </div>
     <div class="right">
       <a href="index.html">Home</a>
       <a href="detail.html">Detailplanung</a>
@@ -103,16 +96,10 @@
         spezifischen Projektstatus sortiert aufgelistet. <br>
         Die Daten werden fortlaufend aktualisiert. Um immer die aktuellsten Daten zu erhalten, drücken
         Sie bitte auf den Refresh Button.
-
       </div>
     </div>
   </section id="home">
-  <section id="abgeschlossen">
-    <div>
-      <h2>
-        Abgeschlossen / Umgesetzt
-      </h2>
-    </div>
+  <section id="main">
     </p>
     <!-- Refresh and search container -->
     <div class="refresh-search-container">
@@ -128,21 +115,20 @@
       </div>
     </div>
     <div>
-      <table id="abgeschlossen-table" class="sortable">
+      <table id="forecast-table" class="sortable">
         <thead>
           <tr>
-            <th class="long">Store</th>
-            <th>PLZ</th>
-            <th class="short">Ort</th>
-            <th class="medium">Straße</th>
-            <th class="long">Art</th>
-            <th class="short">F/C</th>
+            <th class="long">Status</th>
+            <th class="medium">Store</th>
+            <th class="long">Adresse</th>
+            <th class="medium">Art</th>
             <th class="short">Variante</th>
+            <th class="medium">F/C</th>
             <th class="short">DL</th>
-            <th>Schließung</th>
-            <th>KW</th>
-            <th>Eröffnung</th>
-            <th>KW</th>
+            <th class="medium">Abbau</th>
+            <th class="medium">KW</th>
+            <th class="medium">Eröffnung</th>
+            <th class="medium">KW</th>
           </tr>
         </thead>
         <tbody>
@@ -151,141 +137,6 @@
 
     </div>
   </section>
-
-  <section id="inbau">
-    <div>
-      <h2>
-        In Bau befindlich
-      </h2>
-
-    </div>
-    </p>
-    <div class="refresh-search-container">
-      <!-- Refresh button -->
-      <button class="refresh-button" onclick="window.location.reload();"><i class="fa fa-refresh"
-          style="margin-right: 10px;"></i>Aktualisieren</button>
-      <!-- Search box container -->
-      <div class="search-box-container">
-        <!-- Search box -->
-        <i class="fas fa-search search-icon"></i>
-        <input type="text" class="search-box" placeholder="Suche...">
-        <!-- Search icon -->
-      </div>
-    </div>
-
-
-    <div>
-      <table id="inbau-table" class="sortable">
-        <thead>
-          <tr>
-            <th class="long">Store</th>
-            <th>PLZ</th>
-            <th class="short">Ort</th>
-            <th class="medium">Straße</th>
-            <th class="long">Art</th>
-            <th class="short">F/C</th>
-            <th class="short">Variante</th>
-            <th class="short">DL</th>
-            <th>Schließung</th>
-            <th>KW</th>
-            <th>Eröffnung</th>
-            <th>KW</th>
-          </tr>
-        </thead>
-        <tbody>
-        </tbody>
-      </table>
-    </div>
-  </section>
-
-  <section id="vertrag">
-    <div>
-      <h2>
-        Vertrag
-      </h2>
-    </div>
-    </p>
-    <div class="refresh-search-container">
-      <!-- Refresh button -->
-      <button class="refresh-button" onclick="window.location.reload();"><i class="fa fa-refresh"
-          style="margin-right: 10px;"></i>Aktualisieren</button>
-      <!-- Search box container -->
-      <div class="search-box-container">
-        <!-- Search box -->
-        <i class="fas fa-search search-icon"></i>
-        <input type="text" class="search-box" placeholder="Suche...">
-        <!-- Search icon -->
-      </div>
-    </div>
-
-
-    <div>
-      <table id="vertrag-table" class="sortable">
-        <thead>
-          <tr>
-            <th class="long">Store</th>
-            <th>PLZ</th>
-            <th class="short">Ort</th>
-            <th class="medium">Straße</th>
-            <th class="long">Art</th>
-            <th class="short">F/C</th>
-            <th class="short">Variante</th>
-            <th class="short">DL</th>
-            <th>Schließung</th>
-            <th>KW</th>
-            <th>Eröffnung</th>
-            <th>KW</th>
-          </tr>
-        </thead>
-        <tbody>
-        </tbody>
-      </table>
-    </div>
-  </section>
-
-  <section id="freigabe2">
-    <div>
-      <h2>
-        Freigabe 2
-      </h2>
-    </div>
-    </p>
-    <div class="refresh-search-container">
-      <!-- Refresh button -->
-      <button class="refresh-button" onclick="window.location.reload();"><i class="fa fa-refresh"
-          style="margin-right: 10px;"></i>Aktualisieren</button>
-      <!-- Search box container -->
-      <div class="search-box-container">
-        <!-- Search box -->
-        <i class="fas fa-search search-icon"></i>
-        <input type="text" class="search-box" placeholder="Suche...">
-        <!-- Search icon -->
-      </div>
-    </div>
-    <div>
-      <table id="freigabe2-table" class="sortable">
-        <thead>
-          <tr>
-            <th class="long">Store</th>
-            <th>PLZ</th>
-            <th class="short">Ort</th>
-            <th class="medium">Straße</th>
-            <th class="long">Art</th>
-            <th class="short">F/C</th>
-            <th class="short">Variante</th>
-            <th class="short">DL</th>
-            <th>Schließung</th>
-            <th>KW</th>
-            <th>Eröffnung</th>
-            <th>KW</th>
-          </tr>
-        </thead>
-        <tbody>
-        </tbody>
-      </table>
-    </div>
-  </section>
-
 
   <script>
 
@@ -296,29 +147,31 @@
 
     // Make a GET request to the Google Sheets API to retrieve the data for the table
     $.ajax({
-      url: `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/A1:M28?key=${API_KEY}`,
+      url: `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/Forecast!A1:K100?key=${API_KEY}`,
       type: 'GET',
       success: function (response) {
         // The response from the API includes the data for the table in the "values" property
         const data = response.values;
+
+        data.shift();
         // Iterate through the data and add a row to the table for each item
         data.forEach(function (item) {
 
           try {// Determine the class name for the "status" cell based on its value
             var statusClass = "";
-            if (item[1] === "OFFEN") {
-              statusClass = "done";
-            } else if (item[1] === "F/C") {
-              statusClass = "in-work";
-            } else {
-              statusClass = "not-started";
+            if (item[1] === "ABGESCHLOSSEN") {
+              statusClass = "abgeschlossen";
+            } else if (item[1] === "IN BAU") {
+              statusClass = "in-bau";
+            } else if (item[1] === "IN PLANUNG") {
+              statusClass = "in-planung";
             }
           }
           catch (e) {
             console.log(e);
           }
 
-          $('#data-table tbody').append(`
+          $('#forecast-table tbody').append(`
             <tr>
               <td>${item[0]}</td>
               <td class="${statusClass}">${item[1]}</td>
@@ -331,8 +184,6 @@
               <td>${item[8]}</td>
               <td>${item[9]}</td>
               <td>${item[10]}</td>
-              <td>${item[11]}</td>
-              <td>${item[12]}</td>
             </tr>
           `);
         });
@@ -340,10 +191,12 @@
     });
   </script>
 
+
+
   <script>
     // Get the search box and data table elements
     var searchBox = document.querySelector('.search-box');
-    var dataTable = document.querySelector('#data-table');
+    var dataTable = document.querySelector('#forecast-table');
 
     // Add an event listener to the search box that listens for input events
     searchBox.addEventListener('input', function () {
@@ -374,6 +227,18 @@
 
   </script>
   <script>
+    $(document).ready(function () {
+      // Add click event listener to the "a" elements in the middle div
+      $('.middle a').click(function (e) {
+        e.preventDefault();
+        var status = $(this).text();
+        // Show only the rows with the selected status
+        $('#forecast-table tbody tr').hide();
+        $('#forecast-table tbody tr td.status-' + status.toLowerCase()).parent().show();
+      });
+    });
+  </script>
+  <script>
     $(function () {
       $('.scroll-page').on('click', function () {
         var offset = 60; // Set the offset to 50px
@@ -394,7 +259,7 @@
   </script>
 
   <script>
-    var table = document.getElementById("data-table");
+    var table = document.getElementById("forecast-table");
     var cells = table.getElementsByTagName("td");
 
     // Loop through all the cells in the "status" column
