--- a/archiv.html
+++ b/archiv.html
@@ -44,7 +44,7 @@
     <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="table.css">
@@ -65,14 +65,13 @@
     </div>
     <div class="middle">
       <p style="margin-left: 15px; font-weight: bold;">Jahr: </p>
-      <a class="scroll-page" href="#2024">2024</a>
       <a class="scroll-page" href="#2023">2023</a>
       <a class="scroll-page" href="#2022">2022</a>
     </div>
     <div class="right">
       <a href="index.html">Home</a>
-      <a href="detail.html">Detaillplanung</a>
       <a href="forecast.html">Forecast</a>
+      <a href="detail.html">Detailplanung</a>
     </div>
   </nav>
 
@@ -96,50 +95,6 @@
       </div>
     </div>
   </section id="home">
-  <section id="2024">
-    <div>
-      <h2>
-        2024
-      </h2>
-    </div>
-    </p>
-
-    <div class="refresh-search-container">
-      <!-- Refresh button -->
-      <button class="refresh-button" onclick="window.location.reload();"><i class="fa fa-refresh"
-          style="margin-right: 10px;"></i>Aktualisieren</button>
-      <!-- Search box container -->
-      <div class="search-box-container">
-        <!-- Search box -->
-        <i class="fas fa-search search-icon"></i>
-        <input type="text" class="search-box" placeholder="Suche...">
-        <!-- Search icon -->
-      </div>
-    </div>
-    <div>
-      <table id="2024-table" class="sortable">
-        <thead>
-          <tr>
-            <th class="medium">Jahr</th>
-            <th class="medium">Store</th>
-            <th class="long">Adresse</th>
-            <th class="medium">Art</th>
-            <th class="short">Variante</th>
-            <th class="medium">F/C</th>
-            <th class="short">DL</th>
-            <th class="medium">Teilschließung</th>
-            <th class="medium">Teileröffnung</th>
-            <th class="medium">Eröffnung</th>
-            <th class="medium">KW</th>
-            <th class="medium">VIP-Support</th>
-          </tr>
-        </thead>
-        <tbody>
-        </tbody>
-      </table>
-
-    </div>
-  </section id="2024">
 
   <section id="2023">
     <div>
@@ -167,23 +122,24 @@
       <table id="2023-table" class="sortable">
         <thead>
           <tr>
-            <th class="long">Store</th>
-            <th>PLZ</th>
-            <th class="short">Ort</th>
-            <th class="medium">Straße</th>
-            <th class="long">Art</th>
-            <th class="short">F/C</th>
+            <th class="medium">Jahr</th>
+            <th class="medium">Store</th>
+            <th class="long">Adresse</th>
+            <th class="medium">Art</th>
             <th class="short">Variante</th>
+            <th class="medium">F/C</th>
             <th class="short">DL</th>
-            <th>Schließung</th>
-            <th>KW</th>
-            <th>Eröffnung</th>
-            <th>KW</th>
+            <th class="medium">Teilschließung</th>
+            <th class="medium">Teileröffnung</th>
+            <th class="medium">Eröffnung</th>
+            <th class="medium">KW</th>
+            <th class="medium">VIP-Support</th>
           </tr>
         </thead>
         <tbody>
         </tbody>
       </table>
+
     </div>
   </section>
 
@@ -202,7 +158,7 @@
       <div class="search-box-container">
         <!-- Search box -->
         <i class="fas fa-search search-icon"></i>
-        <input type="text" class="search-box" placeholder="Suche...">
+        <input type="text" class="search-box-2" placeholder="Suche...">
         <!-- Search icon -->
       </div>
     </div>
@@ -223,34 +179,36 @@
             <th class="medium">Teileröffnung</th>
             <th class="medium">Eröffnung</th>
             <th class="medium">KW</th>
+            <th class="medium">VIP-Support</th>
           </tr>
         </thead>
         <tbody>
         </tbody>
       </table>
+
     </div>
   </section>
 
   <script>
+    $(document).ready(function () {
+      // Replace YOUR_SHEET_ID with the ID of your Google Sheets file
+      const SHEET_ID = '1Y5nmITD-nCh1Au4RwxMNxwgNMTke5PKaVLJKVmykilA';
+      // Replace YOUR_API_KEY with your Google API key
+      const API_KEY = 'AIzaSyAgtyYzCyesKwKsBr1Qzee0jJoFMuwONtE';
 
-    // Replace YOUR_SHEET_ID with the ID of your Google Sheets file
-    const SHEET_ID = '1Y5nmITD-nCh1Au4RwxMNxwgNMTke5PKaVLJKVmykilA';
-    // Replace YOUR_API_KEY with your Google API key
-    const API_KEY = 'AIzaSyAgtyYzCyesKwKsBr1Qzee0jJoFMuwONtE';
+      // Make a GET request to the Google Sheets API to retrieve the data for the table
+      $.ajax({
+        url: `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/Archiv2023!A1:L100?key=${API_KEY}`,
+        type: 'GET',
+        success: function (response) {
+          // The response from the API includes the data for the table in the "values" property
+          const data = response.values;
 
-    // Make a GET request to the Google Sheets API to retrieve the data for the table
-    $.ajax({
-      url: `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/Archiv2024!A1:L100?key=${API_KEY}`,
-      type: 'GET',
-      success: function (response) {
-        // The response from the API includes the data for the table in the "values" property
-        const data = response.values;
+          data.shift();
+          // Iterate through the data and add a row to the table for each item
+          data.forEach(function (item) {
 
-        data.shift();
-        // Iterate through the data and add a row to the table for each item
-        data.forEach(function (item) {
-
-          $('#2024-table tbody').append(`
+            $('#2023-table tbody').append(`
             <tr>
               <td>${item[0]}</td>
               <td>${item[1]}</td>
@@ -264,18 +222,57 @@
               <td>${item[9]}</td>
               <td>${item[10]}</td>
               <td>${item[11]}</td>
-
             </tr>
           `);
+          });
+        }
+      });
+    })
+  </script>
+  <script>
+    // Replace YOUR_SHEET_ID with the ID of your Google Sheets file
+    const SHEET_ID = '1Y5nmITD-nCh1Au4RwxMNxwgNMTke5PKaVLJKVmykilA';
+    // Replace YOUR_API_KEY with your Google API key
+    const API_KEY = 'AIzaSyAgtyYzCyesKwKsBr1Qzee0jJoFMuwONtE';
+    // Make a GET request to the Google Sheets API to retrieve the data for the table
+    $.ajax({
+      url: `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/Archiv2022!A1:L100?key=${API_KEY}`,
+      type: 'GET',
+      success: function (response) {
+        // The response from the API includes the data for the table in the "values" property
+        const data = response.values;
+
+        data.shift();
+        // Iterate through the data and add a row to the table for each item
+        data.forEach(function (item) {
+
+          $('#2022-table tbody').append(`
+              <tr>
+                <td>${item[0]}</td>
+                <td>${item[1]}</td>
+                <td>${item[2]}</td>
+                <td>${item[3]}</td>
+                <td>${item[4]}</td>
+                <td>${item[5]}</td>
+                <td>${item[6]}</td>
+                <td>${item[7]}</td>
+                <td>${item[8]}</td>
+                <td>${item[9]}</td>
+                <td>${item[10]}</td>
+                <td>${item[11]}</td>
+  
+              </tr>
+            `);
         });
       }
     });
   </script>
 
+
   <script>
     // Get the search box and data table elements
     var searchBox = document.querySelector('.search-box');
-    var dataTable = document.querySelector('#data-table');
+    var dataTable = $("#2023-table")[0];
 
     // Add an event listener to the search box that listens for input events
     searchBox.addEventListener('input', function () {
@@ -306,6 +303,40 @@
 
   </script>
   <script>
+    // Get the search box and data table elements
+    var searchBox = document.querySelector('.search-box-2');
+    var dataTable2 = $("#2022-table")[0];
+
+    // Add an event listener to the search box that listens for input events
+    searchBox.addEventListener('input', function () {
+      // Get the search query from the search box
+      var query = this.value.toLowerCase();
+
+      // Loop through all the rows in the data table
+      for (var i = 1; i < dataTable2.rows.length; i++) {
+        // Get the current row
+        var row = dataTable2.rows[i];
+
+        // Set the row's display style to none by default
+        row.style.display = 'none';
+
+        // Loop through all the cells in the row
+        for (var j = 0; j < row.cells.length; j++) {
+          // Get the current cell
+          var cell = row.cells[j];
+
+          // If the cell's text content contains the search query, set the row's display style to '' (empty string) to show the row
+          if (cell.textContent.toLowerCase().indexOf(query) > -1) {
+            row.style.display = '';
+            break;
+          }
+        }
+      }
+    });
+
+  </script>
+
+  <script>
     $(function () {
       $('.scroll-page').on('click', function () {
         var offset = 60; // Set the offset to 50px
@@ -324,31 +355,6 @@
       });
     });
   </script>
-
-  <script>
-    var table = document.getElementById("data-table");
-    var cells = table.getElementsByTagName("td");
-
-    // Loop through all the cells in the "status" column
-    for (var i = 0; i < cells.length; i++) {
-      // Get the value of the current cell
-      var cellValue = cells[i].innerHTML;
-
-      // Remove any existing classes from the cell
-      cells[i].classList.remove("done", "in-work", "not-started");
-
-      // Add a class to the cell based on its value
-      if (cellValue === "OFFEN") {
-        cells[i].classList.add("done");
-      } else if (cellValue === "F/C") {
-        cells[i].classList.add("in-work");
-      } else {
-        cells[i].classList.add("not-started");
-      }
-    }
-  </script>
-
-
 </body>
 
 </html>
