--- a/detail.html
+++ b/detail.html
@@ -81,7 +81,7 @@
 
     <div>
       <h1>
-        Detaillplanung für alle laufenden Rolloutprojekte
+        Detailplanung für alle laufenden Rolloutprojekte
       </h1>
     </div>
     <div class="info-box">
@@ -93,7 +93,7 @@
       </div>
     </div>
   </section id="home">
-  <section id="detail">
+  <section id="detail1">
 
     <!-- Refresh and search container -->
     <div class="refresh-search-container">
@@ -109,7 +109,7 @@
       </div>
     </div>
     <div>
-      <table id="abgeschlossen-table" class="sortable">
+      <table id="detail1-table" class="sortable">
         <thead>
           <tr>
             <th class="long"></th>
@@ -119,10 +119,6 @@
             <th>#04</th>
             <th>#05</th>
             <th>#06</th>
-            <th>#07</th>
-            <th>#08</th>
-            <th>#09</th>
-            <th>#10</th>
           </tr>
         </thead>
         <tbody>
@@ -130,7 +126,41 @@
       </table>
 
     </div>
-  </section id="detail">
+  </section id="detail1">
+  <section id="detail2">
+
+    <!-- Refresh and search container -->
+    <div class="refresh-search-container">
+      <!-- Refresh button -->
+      <button class="refresh-button" onclick="window.location.reload();"><i class="fa fa-refresh"
+          style="margin-right: 10px;"></i>Aktualisieren</button>
+      <!-- Search box container -->
+      <div class="search-box-container">
+        <!-- Search box -->
+        <i class="fas fa-search search-icon"></i>
+        <input type="text" class="search-box" placeholder="Suche...">
+        <!-- Search icon -->
+      </div>
+    </div>
+    <div>
+      <table id="detail2-table" class="sortable">
+        <thead>
+          <tr>
+            <th class="long"></th>
+            <th>#07</th>
+            <th>#08</th>
+            <th>#09</th>
+            <th>#10</th>
+            <th>#11</th>
+            <th>#12</th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+
+    </div>
+  </section id="detail2">
 
   <script>
 
@@ -141,45 +171,65 @@
 
     // Make a GET request to the Google Sheets API to retrieve the data for the table
     $.ajax({
-      url: `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/A1:M28?key=${API_KEY}`,
+      url: `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values:batchGet?ranges=Detailplanung!A1:A28&ranges=Detailplanung!H1:K28&key=${API_KEY}`,
+      type: 'GET',
+      success: function (response) {
+        const data1 = response.valueRanges[0].values;
+        const data2 = response.valueRanges[1].values;
+        for (let i = 1; i < data1.length; i++) {
+          let hasValue = false;
+          if (data2[i]) {
+            for (let j = 0; j < data2[i].length; j++) {
+              if (data2[i][j]) {
+                hasValue = true;
+                break;
+              }
+            }
+          }
+          for (let j = 0; j < data1[i].length; j++) {
+            $('#detail2-table tbody').append(`
+        <tr>
+          <td class ="first-column">${data1[i][j]}</td>
+          <td>${hasValue && data2[i] && data2[i][j] ? data2[i][j] : ''}</td>
+          <td>${hasValue && data2[i] && data2[i][j + 1] ? data2[i][j + 1] : ''}</td>
+          <td>${hasValue && data2[i] && data2[i][j + 2] ? data2[i][j + 2] : ''}</td>
+          <td>${hasValue && data2[i] && data2[i][j + 3] ? data2[i][j + 3] : ''}</td>
+          <td>${hasValue && data2[i] && data2[i][j + 4] ? data2[i][j + 4] : ''}</td>
+          <td>${hasValue && data2[i] && data2[i][j + 5] ? data2[i][j + 5] : ''}</td>
+        </tr>
+    `);
+          }
+        }
+      }
+    });
+  </script>
+  <script>
+    // Replace YOUR_SHEET_ID with the ID of your Google Sheets file
+    const SHEET_ID_2 = '1Y5nmITD-nCh1Au4RwxMNxwgNMTke5PKaVLJKVmykilA';
+    // Replace YOUR_API_KEY with your Google API key
+    const API_KEY_2 = 'AIzaSyAgtyYzCyesKwKsBr1Qzee0jJoFMuwONtE';
+    // Make a GET request to the Google Sheets API to retrieve the data for the table
+    $.ajax({
+      url: `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID_2}/values/Detailplanung!A1:G28?key=${API_KEY_2}`,
       type: 'GET',
       success: function (response) {
         // The response from the API includes the data for the table in the "values" property
         const data = response.values;
+        data.shift();
         // Iterate through the data and add a row to the table for each item
         data.forEach(function (item) {
 
-          try {// Determine the class name for the "status" cell based on its value
-            var statusClass = "";
-            if (item[1] === "OFFEN") {
-              statusClass = "done";
-            } else if (item[1] === "F/C") {
-              statusClass = "in-work";
-            } else {
-              statusClass = "not-started";
-            }
-          }
-          catch (e) {
-            console.log(e);
-          }
-
-          $('#data-table tbody').append(`
-            <tr>
-              <td>${item[0]}</td>
-              <td class="${statusClass}">${item[1]}</td>
-              <td>${item[2]}</td>
-              <td>${item[3]}</td>
-              <td>${item[4]}</td>
-              <td>${item[5]}</td>
-              <td>${item[6]}</td>
-              <td>${item[7]}</td>
-              <td>${item[8]}</td>
-              <td>${item[9]}</td>
-              <td>${item[10]}</td>
-              <td>${item[11]}</td>
-              <td>${item[12]}</td>
-            </tr>
-          `);
+          $('#detail1-table tbody').append(`
+              <tr>
+                <td class ="first-column">${item[0] || "\u200B"}</td>
+                <td>${item[1] || "\u200B"}</td>
+                <td>${item[2] || "\u200B"}</td>
+                <td>${item[3] || "\u200B"}</td>
+                <td>${item[4] || "\u200B"}</td>
+                <td>${item[5] || "\u200B"}</td>
+                <td>${item[6] || "\u200B"}</td>
+              </tr>
+            `);
         });
       }
     });
@@ -188,7 +238,7 @@
   <script>
     // Get the search box and data table elements
     var searchBox = document.querySelector('.search-box');
-    var dataTable = document.querySelector('#data-table');
+    var dataTable = document.querySelector('#detail1-table');
 
     // Add an event listener to the search box that listens for input events
     searchBox.addEventListener('input', function () {
@@ -236,29 +286,6 @@
         }, speed, 'swing');
       });
     });
-  </script>
-
-  <script>
-    var table = document.getElementById("data-table");
-    var cells = table.getElementsByTagName("td");
-
-    // Loop through all the cells in the "status" column
-    for (var i = 0; i < cells.length; i++) {
-      // Get the value of the current cell
-      var cellValue = cells[i].innerHTML;
-
-      // Remove any existing classes from the cell
-      cells[i].classList.remove("done", "in-work", "not-started");
-
-      // Add a class to the cell based on its value
-      if (cellValue === "OFFEN") {
-        cells[i].classList.add("done");
-      } else if (cellValue === "F/C") {
-        cells[i].classList.add("in-work");
-      } else {
-        cells[i].classList.add("not-started");
-      }
-    }
   </script>
 
 
