--- a/forecast.html
+++ b/forecast.html
@@ -41,6 +41,10 @@
         opacity: 1;
       }
     }
+
+    .abgeschlossen {
+      color: white;
+    }
   </style>
 
 
@@ -118,7 +122,7 @@
       <table id="forecast-table" class="sortable">
         <thead>
           <tr>
-            <th class="long">Status</th>
+            <th class="status">Status</th>
             <th class="medium">Store</th>
             <th class="long">Adresse</th>
             <th class="medium">Art</th>
@@ -159,13 +163,31 @@
 
           try {// Determine the class name for the "status" cell based on its value
             var statusClass = "";
-            if (item[1] === "ABGESCHLOSSEN") {
+            if (item[0] == "ABGESCHLOSSEN") {
               statusClass = "abgeschlossen";
-            } else if (item[1] === "IN BAU") {
+            } else if (item[0] == "IN BAU") {
               statusClass = "in-bau";
-            } else if (item[1] === "IN PLANUNG") {
+            } else if (item[0] == "IN PLANUNG") {
               statusClass = "in-planung";
-            }
+            } else if (item[0] == "VERTRAG") {
+              statusClass = "vertrag";
+            } else if (item[0] == "FREIGABE 2") {
+              statusClass = "freigabe2";
+            } else if (item[0] == "FREIGABE 1") {
+              statusClass = "freigabe1";
+            } else { statusClass = "else" }
+          }
+          catch (e) {
+            console.log(e);
+          }
+
+          try {// Determine the class name for the "status" cell based on its value
+            var varianteClass = "";
+            if (item[4] == "NSO") {
+              varianteClass = "nso";
+            } else if (item[4] == "IRLX") {
+              varianteClass = "irlx";
+            } else { varianteClass = "else" }
           }
           catch (e) {
             console.log(e);
@@ -173,11 +195,15 @@
 
           $('#forecast-table tbody').append(`
             <tr>
-              <td>${item[0]}</td>
-              <td class="${statusClass}">${item[1]}</td>
+              <td class="${statusClass}" disabled>
+                <button>${item[0]}</button>
+              </td>
+              <td>${item[1]}</td>
               <td>${item[2]}</td>
               <td>${item[3]}</td>
-              <td>${item[4]}</td>
+              <td class="${varianteClass}" disabled>
+                <button>${item[4]}</button>
+              </td>
               <td>${item[5]}</td>
               <td>${item[6]}</td>
               <td>${item[7]}</td>
@@ -190,8 +216,6 @@
       }
     });
   </script>
-
-
 
   <script>
     // Get the search box and data table elements
@@ -227,18 +251,6 @@
 
   </script>
   <script>
-    $(document).ready(function () {
-      // Add click event listener to the "a" elements in the middle div
-      $('.middle a').click(function (e) {
-        e.preventDefault();
-        var status = $(this).text();
-        // Show only the rows with the selected status
-        $('#forecast-table tbody tr').hide();
-        $('#forecast-table tbody tr td.status-' + status.toLowerCase()).parent().show();
-      });
-    });
-  </script>
-  <script>
     $(function () {
       $('.scroll-page').on('click', function () {
         var offset = 60; // Set the offset to 50px
@@ -257,30 +269,6 @@
       });
     });
   </script>
-
-  <script>
-    var table = document.getElementById("forecast-table");
-    var cells = table.getElementsByTagName("td");
-
-    // Loop through all the cells in the "status" column
-    for (var i = 0; i < cells.length; i++) {
-      // Get the value of the current cell
-      var cellValue = cells[i].innerHTML;
-
-      // Remove any existing classes from the cell
-      cells[i].classList.remove("done", "in-work", "not-started");
-
-      // Add a class to the cell based on its value
-      if (cellValue === "OFFEN") {
-        cells[i].classList.add("done");
-      } else if (cellValue === "F/C") {
-        cells[i].classList.add("in-work");
-      } else {
-        cells[i].classList.add("not-started");
-      }
-    }
-  </script>
-
 
 </body>
 
