--- a/archiv.html
+++ b/archiv.html
@@ -54,6 +54,7 @@
     <link rel="stylesheet" href="info_box.css">
     <link rel="stylesheet" href="background.css">
     <link rel="stylesheet" href="div.css">
+    <link rel="stylesheet" href="popup.css">
   </head>
 
   <nav>
@@ -77,9 +78,20 @@
 
 </head>
 
-<body>
+<body onload="openForm();">
+  <div class="form-popup" id="myForm">
+    <form class="form-container">
+      <h1>Login</h1>
 
-  <section id="home">
+      <label class="error-mark" for="psw" style="display:none; color: red; font-size: 15px;"><b>Ungültiges
+          Passwort</b></label>
+      <input type="password" placeholder="Enter Password" name="psw" required>
+      <button type="submit" class="btn">Login</button>
+    </form>
+  </div>
+
+
+  <section id=" home">
     <div>
       <h1>
         Archiv
@@ -88,7 +100,8 @@
     <div class="info-box">
       <div class="info-box__icon">i</div>
       <div class="info-box__text">
-        Diese Seite bietet Ihnen einen Überblick über alle abgeschlossenen Rolloutprojekte der vergangenen Jahre. <br>
+        Diese Seite bietet Ihnen einen Überblick über alle abgeschlossenen Rolloutprojekte der vergangenen Jahre.
+        <br>
         Die Daten werden fortlaufend aktualisiert. Um immer die aktuellsten Daten zu erhalten, drücken
         Sie bitte auf den Refresh Button.
 
@@ -106,7 +119,7 @@
     </p>
     <div class="refresh-search-container">
       <!-- Refresh button -->
-      <button class="refresh-button" onclick="window.location.reload();"><i class="fa fa-refresh"
+      <button class="refresh-button" onclick="load2023();"><i class="fa fa-refresh"
           style="margin-right: 10px;"></i>Aktualisieren</button>
       <!-- Search box container -->
       <div class="search-box-container">
@@ -122,7 +135,6 @@
       <table id="2023-table" class="sortable">
         <thead>
           <tr>
-            <th class="medium">Jahr</th>
             <th class="medium">Store</th>
             <th class="long">Adresse</th>
             <th class="medium">Art</th>
@@ -152,7 +164,7 @@
     </p>
     <div class="refresh-search-container">
       <!-- Refresh button -->
-      <button class="refresh-button" onclick="window.location.reload();"><i class="fa fa-refresh"
+      <button class="refresh-button" onclick="load2022();"><i class="fa fa-refresh"
           style="margin-right: 10px;"></i>Aktualisieren</button>
       <!-- Search box container -->
       <div class="search-box-container">
@@ -168,7 +180,6 @@
       <table id="2022-table" class="sortable">
         <thead>
           <tr>
-            <th class="medium">Jahr</th>
             <th class="medium">Store</th>
             <th class="long">Adresse</th>
             <th class="medium">Art</th>
@@ -190,68 +201,104 @@
   </section>
 
   <script>
-    $(document).ready(function () {
-      // Replace YOUR_SHEET_ID with the ID of your Google Sheets file
-      const SHEET_ID = '1Y5nmITD-nCh1Au4RwxMNxwgNMTke5PKaVLJKVmykilA';
-      // Replace YOUR_API_KEY with your Google API key
-      const API_KEY = 'AIzaSyAgtyYzCyesKwKsBr1Qzee0jJoFMuwONtE';
+    function load2023() {
+      if (checkPassword()) {
 
-      // Make a GET request to the Google Sheets API to retrieve the data for the table
-      $.ajax({
-        url: `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/Archiv2023!A1:L100?key=${API_KEY}`,
-        type: 'GET',
-        success: function (response) {
-          // The response from the API includes the data for the table in the "values" property
-          const data = response.values;
+        $(document).ready(function () {
+          // Replace YOUR_SHEET_ID with the ID of your Google Sheets file
+          const SHEET_ID = '1Y5nmITD-nCh1Au4RwxMNxwgNMTke5PKaVLJKVmykilA';
+          // Replace YOUR_API_KEY with your Google API key
+          const API_KEY = 'AIzaSyAgtyYzCyesKwKsBr1Qzee0jJoFMuwONtE';
 
-          data.shift();
-          // Iterate through the data and add a row to the table for each item
-          data.forEach(function (item) {
+          // Make a GET request to the Google Sheets API to retrieve the data for the table
+          $.ajax({
 
-            $('#2023-table tbody').append(`
+            url: `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/Archiv2023!A1:L100?key=${API_KEY}`,
+            type: 'GET',
+            success: function (response) {
+              $('#2023-table tbody').empty();
+              // The response from the API includes the data for the table in the "values" property
+              const data = response.values;
+
+              data.shift();
+
+              // Iterate through the data and add a row to the table for each item
+              data.forEach(function (item) {
+                try {// Determine the class name for the "status" cell based on its value
+                  var varianteClass = "";
+                  if (item[3] == "NSO") {
+                    varianteClass = "nso";
+                  } else if (item[3] == "IRLX") {
+                    varianteClass = "irlx";
+                  } else { varianteClass = "else" }
+                }
+                catch (e) {
+                  console.log(e);
+                }
+
+                $('#2023-table tbody').append(`
             <tr>
               <td>${item[0]}</td>
               <td>${item[1]}</td>
               <td>${item[2]}</td>
-              <td>${item[3]}</td>
-              <td>${item[4]}</td>
+              <td class="${varianteClass}" disabled>
+                <button>${item[3]}</button>
+              </td>
+                <td>${item[4]}</td>
               <td>${item[5]}</td>
               <td>${item[6]}</td>
               <td>${item[7]}</td>
               <td>${item[8]}</td>
               <td>${item[9]}</td>
               <td>${item[10]}</td>
-              <td>${item[11]}</td>
             </tr>
           `);
+              });
+            }
           });
-        }
-      });
-    })
+        })
+      }
+    }
   </script>
   <script>
-    // Replace YOUR_SHEET_ID with the ID of your Google Sheets file
-    const SHEET_ID = '1Y5nmITD-nCh1Au4RwxMNxwgNMTke5PKaVLJKVmykilA';
-    // Replace YOUR_API_KEY with your Google API key
-    const API_KEY = 'AIzaSyAgtyYzCyesKwKsBr1Qzee0jJoFMuwONtE';
-    // Make a GET request to the Google Sheets API to retrieve the data for the table
-    $.ajax({
-      url: `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/Archiv2022!A1:L100?key=${API_KEY}`,
-      type: 'GET',
-      success: function (response) {
-        // The response from the API includes the data for the table in the "values" property
-        const data = response.values;
+    function load2022() {
+      if (checkPassword()) {
+        // Replace YOUR_SHEET_ID with the ID of your Google Sheets file
+        const SHEET_ID = '1Y5nmITD-nCh1Au4RwxMNxwgNMTke5PKaVLJKVmykilA';
+        // Replace YOUR_API_KEY with your Google API key
+        const API_KEY = 'AIzaSyAgtyYzCyesKwKsBr1Qzee0jJoFMuwONtE';
+        // Make a GET request to the Google Sheets API to retrieve the data for the table
+        $.ajax({
+          url: `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/Archiv2022!A1:L100?key=${API_KEY}`,
+          type: 'GET',
+          success: function (response) {
+            $('#2022-table tbody').empty();
+            // The response from the API includes the data for the table in the "values" property
+            const data = response.values;
 
-        data.shift();
-        // Iterate through the data and add a row to the table for each item
-        data.forEach(function (item) {
+            data.shift();
+            // Iterate through the data and add a row to the table for each item
+            data.forEach(function (item) {
+              try {// Determine the class name for the "status" cell based on its value
+                var varianteClass = "";
+                if (item[3] == "NSO") {
+                  varianteClass = "nso";
+                } else if (item[3] == "IRLX") {
+                  varianteClass = "irlx";
+                } else { varianteClass = "else" }
+              }
+              catch (e) {
+                console.log(e);
+              }
 
-          $('#2022-table tbody').append(`
+              $('#2022-table tbody').append(`
               <tr>
                 <td>${item[0]}</td>
                 <td>${item[1]}</td>
                 <td>${item[2]}</td>
-                <td>${item[3]}</td>
+                <td class="${varianteClass}" disabled>
+                <button>${item[3]}</button>
+              </td>
                 <td>${item[4]}</td>
                 <td>${item[5]}</td>
                 <td>${item[6]}</td>
@@ -259,13 +306,14 @@
                 <td>${item[8]}</td>
                 <td>${item[9]}</td>
                 <td>${item[10]}</td>
-                <td>${item[11]}</td>
-  
+ 
               </tr>
             `);
+            });
+          }
         });
       }
-    });
+    }
   </script>
 
 
@@ -333,6 +381,48 @@
         }
       }
     });
+
+  </script>
+  <script>
+    const form = document.querySelector(".form-container");
+    function openForm() {
+      if (checkPassword()) {
+        load2022();
+        load2023();
+        form.remove();
+      } else {
+        document.getElementById("myForm").style.display = "block";
+        const passwordInput = document.querySelector("input[name='psw']");
+        const errorMark = document.querySelector(".error-mark");
+        const submitButton = document.querySelector("button[type='submit']");
+
+        submitButton.addEventListener("click", (event) => {
+          event.preventDefault();
+
+          if (passwordInput.value === "mcdonalds") {
+            sessionStorage.setItem("passwordIsCorrect", true);
+            form.remove();
+            load2022();
+            load2023();
+          } else {
+            errorMark.style.display = "inline";
+          }
+        });
+      }
+    }
+
+
+  </script>
+
+  <script>
+    function checkPassword() {
+      const passwordIsCorrect = sessionStorage.getItem("passwordIsCorrect");
+      if (passwordIsCorrect === "true") {
+        return true;
+      } else {
+        return false;
+      }
+    }
 
   </script>
 
