--- a/forecast.html
+++ b/forecast.html
@@ -41,10 +41,6 @@
         opacity: 1;
       }
     }
-
-    .abgeschlossen {
-      color: white;
-    }
   </style>
 
 
@@ -65,6 +61,7 @@
     <link rel="stylesheet" href="info_box.css">
     <link rel="stylesheet" href="background.css">
     <link rel="stylesheet" href="div.css">
+    <link rel="stylesheet" href="popup.css">
   </head>
 
   <nav>
@@ -83,7 +80,18 @@
 
 </head>
 
-<body>
+<body onload="openForm()">
+  <!-- The form -->
+  <div class="form-popup" id="myForm">
+    <form class="form-container">
+      <h1>Login</h1>
+
+      <label class="error-mark" for="psw" style="display:none; color: red; font-size: 15px;"><b>Ungültiges
+          Passwort</b></label>
+      <input type="password" placeholder="Enter Password" name="psw" required>
+      <button type="submit" class="btn">Login</button>
+    </form>
+  </div>
 
   <section id="home">
 
@@ -108,7 +116,7 @@
     <!-- Refresh and search container -->
     <div class="refresh-search-container">
       <!-- Refresh button -->
-      <button class="refresh-button" onclick="window.location.reload();"><i class="fa fa-refresh"
+      <button class="refresh-button" onclick="myFunction();"><i class="fa fa-refresh"
           style="margin-right: 10px;"></i>Aktualisieren</button>
       <!-- Search box container -->
       <div class="search-box-container">
@@ -143,57 +151,60 @@
   </section>
 
   <script>
+    function myFunction() {
+      if (checkPassword()) {
 
-    // Replace YOUR_SHEET_ID with the ID of your Google Sheets file
-    const SHEET_ID = '1Y5nmITD-nCh1Au4RwxMNxwgNMTke5PKaVLJKVmykilA';
-    // Replace YOUR_API_KEY with your Google API key
-    const API_KEY = 'AIzaSyAgtyYzCyesKwKsBr1Qzee0jJoFMuwONtE';
+        // Replace YOUR_SHEET_ID with the ID of your Google Sheets file
+        const SHEET_ID = '1Y5nmITD-nCh1Au4RwxMNxwgNMTke5PKaVLJKVmykilA';
+        // Replace YOUR_API_KEY with your Google API key
+        const API_KEY = 'AIzaSyAgtyYzCyesKwKsBr1Qzee0jJoFMuwONtE';
 
-    // Make a GET request to the Google Sheets API to retrieve the data for the table
-    $.ajax({
-      url: `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/Forecast!A1:K100?key=${API_KEY}`,
-      type: 'GET',
-      success: function (response) {
-        // The response from the API includes the data for the table in the "values" property
-        const data = response.values;
+        // Make a GET request to the Google Sheets API to retrieve the data for the table
+        $.ajax({
+          url: `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/Forecast!A1:K100?key=${API_KEY}`,
+          type: 'GET',
+          success: function (response) {
+            // The response from the API includes the data for the table in the "values" property
+            const data = response.values;
 
-        data.shift();
-        // Iterate through the data and add a row to the table for each item
-        data.forEach(function (item) {
+            data.shift();
+            // Iterate through the data and add a row to the table for each item
+            $('#forecast-table tbody').empty();
+            data.forEach(function (item) {
 
-          try {// Determine the class name for the "status" cell based on its value
-            var statusClass = "";
-            if (item[0] == "ABGESCHLOSSEN") {
-              statusClass = "abgeschlossen";
-            } else if (item[0] == "IN BAU") {
-              statusClass = "in-bau";
-            } else if (item[0] == "IN PLANUNG") {
-              statusClass = "in-planung";
-            } else if (item[0] == "VERTRAG") {
-              statusClass = "vertrag";
-            } else if (item[0] == "FREIGABE 2") {
-              statusClass = "freigabe2";
-            } else if (item[0] == "FREIGABE 1") {
-              statusClass = "freigabe1";
-            } else { statusClass = "else" }
-          }
-          catch (e) {
-            console.log(e);
-          }
+              try {// Determine the class name for the "status" cell based on its value
+                var statusClass = "";
+                if (item[0] == "ABGESCHLOSSEN") {
+                  statusClass = "abgeschlossen";
+                } else if (item[0] == "IN BAU") {
+                  statusClass = "in-bau";
+                } else if (item[0] == "IN PLANUNG") {
+                  statusClass = "in-planung";
+                } else if (item[0] == "VERTRAG") {
+                  statusClass = "vertrag";
+                } else if (item[0] == "FREIGABE 2") {
+                  statusClass = "freigabe2";
+                } else if (item[0] == "FREIGABE 1") {
+                  statusClass = "freigabe1";
+                } else { statusClass = "else" }
+              }
+              catch (e) {
+                console.log(e);
+              }
 
-          try {// Determine the class name for the "status" cell based on its value
-            var varianteClass = "";
-            if (item[4] == "NSO") {
-              varianteClass = "nso";
-            } else if (item[4] == "IRLX") {
-              varianteClass = "irlx";
-            } else { varianteClass = "else" }
-          }
-          catch (e) {
-            console.log(e);
-          }
+              try {// Determine the class name for the "status" cell based on its value
+                var varianteClass = "";
+                if (item[4] == "NSO") {
+                  varianteClass = "nso";
+                } else if (item[4] == "IRLX") {
+                  varianteClass = "irlx";
+                } else { varianteClass = "else" }
+              }
+              catch (e) {
+                console.log(e);
+              }
 
-          $('#forecast-table tbody').append(`
+              $('#forecast-table tbody').append(`
             <tr>
               <td class="${statusClass}" disabled>
                 <button>${item[0]}</button>
@@ -212,9 +223,11 @@
               <td>${item[10]}</td>
             </tr>
           `);
+            });
+          }
         });
       }
-    });
+    }
   </script>
 
   <script>
@@ -268,6 +281,47 @@
         }, speed, 'swing');
       });
     });
+  </script>
+  <script>
+    function openForm() {
+      const form = document.querySelector(".form-container");
+      if (checkPassword()) {
+        passwordIsCorrect = true;
+        myFunction();
+        form.remove();
+      } else {
+        document.getElementById("myForm").style.display = "block";
+        const passwordInput = document.querySelector("input[name='psw']");
+        const errorMark = document.querySelector(".error-mark");
+        const submitButton = document.querySelector("button[type='submit']");
+
+        submitButton.addEventListener("click", (event) => {
+          event.preventDefault();
+
+          if (passwordInput.value === "mcdonalds") {
+            sessionStorage.setItem("passwordIsCorrect", true);
+            form.remove();
+            myFunction();
+          } else {
+            errorMark.style.display = "inline";
+          }
+        });
+      }
+    }
+
+
+  </script>
+
+  <script>
+    function checkPassword() {
+      const passwordIsCorrect = sessionStorage.getItem("passwordIsCorrect");
+      if (passwordIsCorrect === "true") {
+        return true;
+      } else {
+        return false;
+      }
+    }
+
   </script>
 
 </body>
