--- a/detail.html
+++ b/detail.html
@@ -41,7 +41,7 @@
 
 
   <head>
-    <title>Forecast</title>
+    <title>Rolloutmonitor</title>
     <link rel="icon" href="Logo SOS IS GmbH Neu shadow_tif.webp">
     <script src=" https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
@@ -313,7 +313,7 @@
         submitButton.addEventListener("click", (event) => {
           event.preventDefault();
 
-          if (passwordInput.value === "mcd") {
+          if (passwordInput.value === "mcdonalds") {
             sessionStorage.setItem("passwordIsCorrect", true);
             form.remove();
             loadDetail1();
