--- a/archiv.html
+++ b/archiv.html
@@ -137,8 +137,8 @@
           <tr>
             <th class="medium">Store</th>
             <th class="long">Adresse</th>
-            <th class="medium">Art</th>
-            <th class="short">Variante</th>
+            <th class="short">Art</th>
+            <th class="medium">Variante</th>
             <th class="medium">F/C</th>
             <th class="short">DL</th>
             <th class="medium">Teilschließung</th>
@@ -182,8 +182,8 @@
           <tr>
             <th class="medium">Store</th>
             <th class="long">Adresse</th>
-            <th class="medium">Art</th>
-            <th class="short">Variante</th>
+            <th class="short">Art</th>
+            <th class="medium">Variante</th>
             <th class="medium">F/C</th>
             <th class="short">DL</th>
             <th class="medium">Teilschließung</th>
