--- a/forecast.html
+++ b/forecast.html
@@ -133,8 +133,8 @@
             <th class="status">Status</th>
             <th class="medium">Store</th>
             <th class="long">Adresse</th>
-            <th class="medium">Art</th>
-            <th class="short">Variante</th>
+            <th class="short">Art</th>
+            <th class="medium">Variante</th>
             <th class="medium">F/C</th>
             <th class="short">DL</th>
             <th class="medium">Abbau</th>
